--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
   <title>I don't know yet</title>
-    <style>
-      #map {
-        width: 500px;
-        height: 400px;
+
+   <style>
+   	html, body { height: 100%; margin: 0; padding: 0; }
+    #map {
+        height: 100%;
       }
     </style>
 
@@ -24,9 +25,11 @@
     </script>
   </head>
 
+
   <body>
     <div id="map"></div>
     <script src="knockout-3.4.0.js"></script>
+	<script src="app.js"></script>
 
   </body>
 </html>
