load google maps async

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Project 5</title>
     <meta charset="UTF-8">
@@ -26,5 +25,7 @@
     </div>
     <div id="map" class="map">
     </div>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAh7f-89owQdNx-ihJWQcnZWL6XP9gcqdQ&callback=initialize" onerror="errorHandling()" ></script>
 </body>
 </html>
